Home header added

--- a/SPE-website/pages/templates/pages/home.html
+++ b/SPE-website/pages/templates/pages/home.html
@@ -28,70 +28,24 @@
 </style>
 {% endblock content-blog %} {% block content %}
 <div style="padding-top:100px;"></div>
-<!-- <div class="slider-container" style="margin-top: -150px; z-index:-1;">
-    <div class="slider-control left inactive"></div>
-    <div class="slider-control right"></div>
-    <ul class="slider-pagi"></ul>
-    <div class="slider">
-        <div class="slide slide-0 active">
-            <div class="slide__bg"></div>
-            <div class="slide__content">
-                <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-            <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-          </svg>
-                <div class="slide__text">
-                    <h2 class="slide__text-heading">First Slide</h2>
-                    <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus
-                        illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-                    <a class="slide__text-link">Link</a>
-                </div>
-            </div>
-        </div>
-        <div class="slide slide-1 ">
-            <div class="slide__bg"></div>
-            <div class="slide__content">
-                <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-            <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-          </svg>
-                <div class="slide__text">
-                    <h2 class="slide__text-heading">Second Slide</h2>
-                    <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus
-                        illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-                    <a class="slide__text-link">Link</a>
-                </div>
-            </div>
-        </div>
-        <div class="slide slide-2">
-            <div class="slide__bg"></div>
-            <div class="slide__content">
-                <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-            <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-          </svg>
-                <div class="slide__text">
-                    <h2 class="slide__text-heading">3rd slide</h2>
-                    <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus
-                        illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-                    <a class="slide__text-link">Link</a>
-                </div>
-            </div>
-        </div>
-        <div class="slide slide-3">
-            <div class="slide__bg"></div>
-            <div class="slide__content">
-                <svg class="slide__overlay" viewBox="0 0 720 405" preserveAspectRatio="xMaxYMax slice">
-            <path class="slide__overlay-path" d="M0,0 150,0 500,405 0,405" />
-          </svg>
-                <div class="slide__text">
-                    <h2 class="slide__text-heading">4th Slide</h2>
-                    <p class="slide__text-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus illo debitis nihil animi facere, doloremque voluptate tempore quia. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio veniam minus
-                        illo debitis nihil animi facere, doloremque voluptate tempore quia.</p>
-                    <a class="slide__text-link">Link</a>
-                </div>
-            </div>
-        </div>
+<!-- Hero Header -->
+<div class="hero-image" style="margin-top: -14px; overflow: hidden;">
+    <div class="hero-text">
+        <h1 style="font-family: 'Barlow', sans-serif; font-size: 50px; font-weight: 900;" data-aos="fade-down" data-aos-duration="3000">SPE IIT(ISM) STUDENT CHAPTER</h1>
     </div>
-</div> -->
+    <a href="#" id="downBtn">
+        <span class="container" style="height: 24px; width: 24px; position: relative; left: 50%; top: 60%;">
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+                <div class="chevron"></div>
+            <!-- <a class="down" href="#">Scroll down</a> -->
+        </span>
+    </a>
+</div>
+<!-- Hero Header end -->
 
+
+<!-- Who we are and announcement section -->
 
 <div class="container" style="color: black !important;font-family: 'Dosis', sans-serif;">
     <div class="row">
@@ -142,6 +96,8 @@
     </div>
 </div>
 
+
+<!-- Who we are and announcement section end-->
 
 <!-- Blogs Section -->
 
@@ -234,7 +190,7 @@
                 margin: 0 auto;
                 width: 100%;
                 text-align: center;">
-                <a href="{% url 'about-page' %}" class="button" style="font-size: 20px;">Click Here</a>
+                <a href="core-team.html" class="button" style="font-size: 20px;">Click Here</a>
             </div>
         </div>
     </div>
