--- a/SPE-website/pages/static/pages/home.css
+++ b/SPE-website/pages/static/pages/home.css
@@ -2,333 +2,139 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,600;0,700;0,800;1,400;1,600;1,700;1,800&display=swap');
 
-/* *:before,
-*:after {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+/* HEADER STYLES */
 
-html,
-body {
-    font-size: 62.5%;
-    height: 100%;
-    overflow-x: hidden !important;
-}
-
-svg {
-    display: block;
-    overflow: visible;
-}
-
-.slider-container {
-    position: relative;
-    height: 100%;
-    user-select: none;
-    cursor: all-scroll;
-}
-
-.slider-control {
-    z-index: 2;
-    position: absolute;
-    top: 0;
-    width: 12%;
-    height: 100%;
-    transition: opacity 0.3s;
-    will-change: opacity;
-    opacity: 0;
-}
-
-.slider-control.inactive:hover {
-    cursor: auto;
-}
-
-.slider-control:not(.inactive):hover {
-    opacity: 1;
-    cursor: pointer;
-}
-
-.slider-control.left {
-    left: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.18) 0%, rgba(0, 0, 0, 0) 100%);
-}
-
-.slider-control.right {
-    right: 0;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.18) 100%);
-}
-
-.slider-pagi {
-    position: absolute;
-    z-index: 3;
-    left: 50%;
-    bottom: 2rem;
-    transform: translateX(-50%);
-    font-size: 0;
-    list-style-type: none;
-}
-
-.slider-pagi__elem {
-    position: relative;
-    display: inline-block;
-    vertical-align: top;
-    width: 2rem;
-    height: 2rem;
-    margin: 0 0.5rem;
-    border-radius: 50%;
-    border: 2px solid #fff;
-    cursor: pointer;
-}
-
-.slider-pagi__elem:before {
-    content: "";
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    width: 1.2rem;
-    height: 1.2rem;
-    background: #fff;
-    border-radius: 50%;
-    transition: transform 0.3s;
-    transform: translate(-50%, -50%) scale(0);
-}
-
-.slider-pagi__elem.active:before,
-.slider-pagi__elem:hover:before {
-    transform: translate(-50%, -50%) scale(1);
-}
-
-.slider {
-    z-index: 1;
-    position: relative;
-    height: 100%;
-}
-
-.slider.animating {
-    transition: transform 0.5s;
-    will-change: transform;
-}
-
-.slider.animating .slide__bg {
-    transition: transform 0.5s;
-    will-change: transform;
-}
-
-.slide {
-    position: absolute;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.slide.active .slide__overlay,
-.slide.active .slide__text {
-    opacity: 1;
-    transform: translateX(0);
-}
-
-.slide__bg {
-    position: absolute;
-    top: 0;
-    left: -50%;
-    width: 100%;
-    height: 100%;
+.hero-image {
+    /* linear-gradient(rgba(2, 17, 43, 0.5), rgba(2, 17, 43, 0.5)), */
+    background-image: url("https://s1.cdn.autoevolution.com/images/news/crude-oil-trading-well-below-30-us-tax-plan-raised-to-1025-a-barrel-104501_1.jpg");
+    height: 600px;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
-    will-change: transform;
-}
-
-.slide:nth-child(1) {
-    left: 0;
-}
-
-.slide:nth-child(1) .slide__bg {
-    left: 0;
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-3.jpg');
-}
-
-.slide:nth-child(1) .slide__overlay-path {
-    fill: #e99c7e;
-}
-
-@media (max-width: 991px) {
-    .slide:nth-child(1) .slide__text {
-        background-color: rgba(233, 156, 126, 0.8);
-    }
-}
-
-.slide:nth-child(2) {
-    left: 100%;
-}
-
-.slide:nth-child(2) .slide__bg {
-    left: -50%;
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-2.jpg');
-}
-
-.slide:nth-child(2) .slide__overlay-path {
-    fill: #e1ccae;
-}
-
-@media (max-width: 991px) {
-    .slide:nth-child(2) .slide__text {
-        background-color: rgba(225, 204, 174, 0.8);
-    }
-}
-
-.slide:nth-child(3) {
-    left: 200%;
-}
-
-.slide:nth-child(3) .slide__bg {
-    left: -100%;
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-1.jpg');
-}
-
-.slide:nth-child(3) .slide__overlay-path {
-    fill: #adc5cd;
-}
-
-@media (max-width: 991px) {
-    .slide:nth-child(3) .slide__text {
-        background-color: rgba(173, 197, 205, 0.8);
-    }
-}
-
-.slide:nth-child(4) {
-    left: 300%;
-}
-
-.slide:nth-child(4) .slide__bg {
-    left: -150%;
-    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-4.jpg');
-}
-
-.slide:nth-child(4) .slide__overlay-path {
-    fill: #cbc6c3;
-}
-
-@media (max-width: 991px) {
-    .slide:nth-child(4) .slide__text {
-        background-color: rgba(203, 198, 195, 0.8);
-    }
-}
-
-.slide__content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.slide__overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 100%;
-    min-height: 810px;
-    transition: transform 0.5s 0.5s, opacity 0.2s 0.5s;
-    will-change: transform, opacity;
-    transform: translate3d(-20%, 0, 0);
-    opacity: 0;
-}
-
-@media (max-width: 991px) {
-    .slide__overlay {
-        display: none;
-    }
-}
-
-.slide__overlay path {
-    opacity: 0.8;
-}
-
-.slide__text {
-    position: absolute;
-    width: 25%;
-    bottom: 15%;
-    left: 12%;
-    color: #fff;
-    transition: transform 0.5s 0.8s, opacity 0.5s 0.8s;
-    will-change: transform, opacity;
-    transform: translateY(-50%);
-    opacity: 0;
-}
-
-@media (max-width: 991px) {
-    .slide__text {
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 20rem;
-        text-align: center;
-        transform: translateY(50%);
-        transition: transform 0.5s 0.5s, opacity 0.5s 0.5s;
-        padding: 0 1rem;
-    }
-}
-
-.slide__text-heading {
-    font-family: 'Polar', Helvetica, Arial, sans-serif;
-    font-size: 5rem;
-    margin-bottom: 2rem;
-}
-
-@media (max-width: 991px) {
-    .slide__text-heading {
-        line-height: 20rem;
-        font-size: 3.5rem;
-    }
-}
-
-.slide__text-desc {
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    font-size: 1.8rem;
-    margin-bottom: 1.5rem;
-}
-
-@media (max-width: 991px) {
-    .slide__text-desc {
-        display: none;
-    }
-}
-
-.slide__text-link {
-    z-index: 5;
-    display: inline-block;
     position: relative;
-    padding: 0.5rem;
-    cursor: pointer;
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    font-size: 2.3rem;
-    perspective: 1000px;
+    clip-path: polygon(0 0, 100% 0, 100% 62%, 0 89%);
 }
 
-@media (max-width: 991px) {
-    .slide__text-link {
-        display: none;
+.hero-text {
+    text-align: center;
+    position: absolute;
+    text-transform: uppercase;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+.hero-text button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 10px 25px;
+    color: black;
+    background-color: #ddd;
+    text-align: center;
+    cursor: pointer;
+}
+
+.hero-text button:hover {
+    background-color: #555;
+    color: white;
+}
+
+
+/* Scroll down animation */
+
+
+/* body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #333;
+}
+
+.container {
+    position: relative;
+    width: 24px;
+    height: 24px;
+} */
+
+.chevron {
+    position: absolute;
+    width: 28px;
+    height: 8px;
+    opacity: 0;
+    transform: scale3d(0.5, 0.5, 0.5);
+    animation: move 3s ease-out infinite;
+}
+
+.chevron:first-child {
+    animation: move 3s ease-out 1s infinite;
+}
+
+.chevron:nth-child(2) {
+    animation: move 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    height: 100%;
+    width: 51%;
+    background: #fff;
+}
+
+.chevron:before {
+    left: 0;
+    transform: skew(0deg, 30deg);
+}
+
+.chevron:after {
+    right: 0;
+    width: 50%;
+    transform: skew(0deg, -30deg);
+}
+
+@keyframes move {
+    25% {
+        opacity: 1;
+    }
+    33% {
+        opacity: 1;
+        transform: translateY(30px);
+    }
+    67% {
+        opacity: 1;
+        transform: translateY(40px);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
     }
 }
 
-.slide__text-link:before {
-    z-index: -1;
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    transform-origin: 50% 100%;
-    transform: rotateX(-85deg);
-    transition: transform 0.3s;
-    will-change: transform;
+.text {
+    display: block;
+    margin-top: 75px;
+    margin-left: -30px;
+    font-family: "Helvetica Neue", "Helvetica", Arial, sans-serif;
+    font-size: 12px;
+    color: #fff;
+    text-transform: uppercase;
+    white-space: nowrap;
+    opacity: .25;
+    animation: pulse 2s linear alternate infinite;
 }
 
-.slide__text-link:hover:before {
-    transform: rotateX(0);
-} */
+@keyframes pulse {
+    to {
+        opacity: 1;
+    }
+}
 
 
 /* Read more button */
