--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content-blog %}
-    <link rel="stylesheet" type="text/css" href="{% static 'pages/teampage.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/core-team.css' %}">
 {% endblock content-blog %}
 
 {% block content %}
@@ -30,67 +30,49 @@
                 <div class="grid-container">
 
                     <!-- Card -->
-                    <div class="card">
-                      <!-- Card image -->
-                      <div class="view overlay">
-                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
-                          alt="Card image cap" style="">
-                        <a href="#!">
-                          <div class="mask rgba-white-slight"></div>
-                        </a>
-                      </div>
-                      <!-- Card content -->
-                      <div class="card-body">
-                        <!-- Title -->
-                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
-                          <hr class="title-partition">
-                        <!-- Text -->
-                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar" style="width:300px;height:360px;">
+                        </div>
+                        <div class="flip-card-back flip-border">
+                          <h1 class="card-title">John Doe</h1>
+                          <hr style="background-color: white; height: 0.1px; width: 200px; margin-bottom: 25px;">
+                          <p>Architect & Engineer</p>
+                          <p>We love that guy</p>
+                        </div>
                       </div>
                     </div>
                     <!-- Card -->
 
                     <!-- Card -->
-                    <div class="card">
-                      <!-- Card image -->
-                      <div class="view overlay">
-                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
-                          alt="Card image cap" style="">
-                        <a href="#!">
-                          <div class="mask rgba-white-slight"></div>
-                        </a>
-                      </div>
-                      <!-- Card content -->
-                      <div class="card-body">
-                        <!-- Title -->
-                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
-                          <hr class="title-partition">
-                        <!-- Text -->
-                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar" style="width:300px;height:360px;">
+                        </div>
+                        <div class="flip-card-back flip-border">
+                          <h1 class="card-title">John Doe</h1>
+                          <hr style="background-color: white; height: 0.1px; width: 200px; margin-bottom: 25px;">
+                          <p>Architect & Engineer</p>
+                          <p>We love that guy</p>
+                        </div>
                       </div>
                     </div>
                     <!-- Card -->
 
                     <!-- Card -->
-                    <div class="card">
-                      <!-- Card image -->
-                      <div class="view overlay">
-                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
-                          alt="Card image cap" style="">
-                        <a href="#!">
-                          <div class="mask rgba-white-slight"></div>
-                        </a>
-                      </div>
-                      <!-- Card content -->
-                      <div class="card-body">
-                        <!-- Title -->
-                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
-                          <hr class="title-partition">
-                        <!-- Text -->
-                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar" style="width:300px;height:360px;">
+                        </div>
+                        <div class="flip-card-back flip-border">
+                          <h1 class="card-title">John Doe</h1>
+                          <hr style="background-color: white; height: 0.1px; width: 200px; margin-bottom: 25px;">
+                          <p>Architect & Engineer</p>
+                          <p>We love that guy</p>
+                        </div>
                       </div>
                     </div>
                     <!-- Card -->
@@ -100,7 +82,7 @@
         </div>
         <!--Office Bearers Section-->
 
-        <br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
 
         <!--Core Team Section-->
         <div class="d-block mx-auto">
@@ -121,71 +103,54 @@
                 <div class="grid-container">
 
                     <!-- Card -->
-                    <div class="card">
-                      <!-- Card image -->
-                      <div class="view overlay">
-                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
-                          alt="Card image cap" style="">
-                        <a href="#!">
-                          <div class="mask rgba-white-slight"></div>
-                        </a>
-                      </div>
-                      <!-- Card content -->
-                      <div class="card-body">
-                        <!-- Title -->
-                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
-                          <hr class="title-partition">
-                        <!-- Text -->
-                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar" style="width:300px;height:360px;">
+                        </div>
+                        <div class="flip-card-back flip-border">
+                          <h1 class="card-title">John Doe</h1>
+                          <hr style="background-color: white; height: 0.1px; width: 200px; margin-bottom: 25px;">
+                          <p>Architect & Engineer</p>
+                          <p>We love that guy</p>
+                        </div>
                       </div>
                     </div>
                     <!-- Card -->
 
                     <!-- Card -->
-                    <div class="card">
-                      <!-- Card image -->
-                      <div class="view overlay">
-                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
-                          alt="Card image cap" style="">
-                        <a href="#!">
-                          <div class="mask rgba-white-slight"></div>
-                        </a>
-                      </div>
-                      <!-- Card content -->
-                      <div class="card-body">
-                        <!-- Title -->
-                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
-                          <hr class="title-partition">
-                        <!-- Text -->
-                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar" style="width:300px;height:360px;">
+                        </div>
+                        <div class="flip-card-back flip-border">
+                          <h1 class="card-title">John Doe</h1>
+                          <hr style="background-color: white; height: 0.1px; width: 200px; margin-bottom: 25px;">
+                          <p>Architect & Engineer</p>
+                          <p>We love that guy</p>
+                        </div>
                       </div>
                     </div>
                     <!-- Card -->
 
                     <!-- Card -->
-                    <div class="card">
-                      <!-- Card image -->
-                      <div class="view overlay">
-                        <img class="card-img-top" src="https://iitism.irins.org/assets/profile_images/608632.jpg"
-                          alt="Card image cap" style="">
-                        <a href="#!">
-                          <div class="mask rgba-white-slight"></div>
-                        </a>
-                      </div>
-                      <!-- Card content -->
-                      <div class="card-body">
-                        <!-- Title -->
-                        <h4 class="card-title" style="color: white;">Lorem Ipsum Dolor</h4>
-                          <hr class="title-partition">
-                        <!-- Text -->
-                        <p class="card-text" style="font-size: 20px; color: white;">Some quick example text to build on the card title and make up the bulk of the card's
-                          content.</p>
+                    <div class="flip-card">
+                      <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar" style="width:300px;height:360px;">
+                        </div>
+                        <div class="flip-card-back flip-border">
+                          <h1 class="card-title">John Doe</h1>
+                          <hr style="background-color: white; height: 0.1px; width: 200px; margin-bottom: 25px;">
+                          <p>Architect & Engineer</p>
+                          <p>We love that guy</p>
+                        </div>
                       </div>
                     </div>
                     <!-- Card -->
 
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
                 </div>
                  <!--Developer Section-->
 
