--- a/SPE-website/pages/templates/pages/core-team.html
+++ b/SPE-website/pages/templates/pages/core-team.html
@@ -18,7 +18,7 @@
         <h1 class="d-flex justify-content-center" id="PageTitle">Our Team</h1>
                 <hr class="d-flex justify-content-center" id="UnderlineTitle">
 
-        <img class="team-vector d-block mx-auto" src="{% static 'pages/team-images/team-members.png' %}">
+        <img class="team-vector d-block mx-auto" src="{% static 'pages/team-images/team-vector.png' %}">
         <!-- Team Image-->
 
         <!--Office Bearers Section-->
@@ -33,7 +33,8 @@
                     <div class="flip-card">
                       <div class="flip-card-inner">
                         <div class="flip-card-front">
-                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar" style="width:300px;height:360px;">
+                          <img class="round-img" src="{% static 'pages/team-images/sample-img.jpg' %}" alt="Avatar"
+                               style="width:300px; height:360px;">
                         </div>
                         <div class="flip-card-back flip-border">
                           <h1 class="card-title">John Doe</h1>
