--- a/SPE-website/pages/static/pages/core-team0.css
+++ b/SPE-website/pages/static/pages/core-team0.css
@@ -42,7 +42,8 @@
 .flip-card {
   background-color: transparent;
   width: 300px;
-  height: 200px;
+  height: 360px;
+  margin-bottom: 90px;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
 
@@ -72,16 +73,15 @@
 
 /* Style the front side (fallback if image is missing) */
 .flip-card-front {
-  background-color: #bbb;
+  background-color: transparent;
   color: black;
 }
 
 /* Style the back side */
 .flip-card-back {
-  background-image: url(/media/core-team_images/sample-blur.jpg);
   background-size: 300px 360px;
   color: white;
-  border-radius: 20px;
+  border-radius: 30px;
   transform: rotateY(180deg);
   height: 360px;
   width: 300px;
@@ -89,10 +89,40 @@
 }
 
 .round-img {
-    border-radius: 20px;
+    border-radius: 30px;
+    width:300px;
+    height:360px;
 }
 
 .card-title {
     font-family:'oxygen';
     margin-top: 15px;
+    font-size: 30px;
+    font-weight: 800;
+}
+
+.underline {
+    background-color: white;
+    height: 0.1px;
+    width: 200px;
+    margin-bottom: 25px;
+}
+
+.fa {
+    font-size: 1.55em;
+    padding-left: 25px;
+    position: absolute;
+    bottom: 30px;
+}
+
+.fa-instagram {
+    left: 50px;
+}
+
+.fa-linkedin {
+    left: 120px;
+}
+
+.fa-facebook {
+    right: 50px;
 }
