landing page half done

--- a/SPE-website/pages/templates/pages/landing-page.html
+++ b/SPE-website/pages/templates/pages/landing-page.html
@@ -1,6 +1,24 @@
 {% load static %}
 
-<h1>Landing page</h1>
-<br><br><Br>
+<head>
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/landingpage.css' %}">
+</head>
 
-<a href="{% url 'home-page' %}">Home</a>
+<body>
+
+    <div class="banner">
+
+        <div class="img-text">
+            <h2>SPE IIT ISM STUDENT SC</h2>
+            <img src="{% static 'pages/landingpage-bg/SPE-logo.png' %}" style="height: 180px;">
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                It has survived not only fiv</p>
+        </div>
+
+        <div class="enclose"></div>
+
+    </div>
+
+</body>
