--- a/SPE-website/pages/templates/pages/landing-page.html
+++ b/SPE-website/pages/templates/pages/landing-page.html
@@ -9,12 +9,39 @@
     <div class="banner">
 
         <div class="img-text">
-            <h2>SPE IIT ISM STUDENT SC</h2>
+            <h2>SPE IIT ISM STUDENT CHAPTER</h2>
             <img src="{% static 'pages/landingpage-bg/SPE-logo.png' %}" style="height: 180px;">
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                It has survived not only fiv</p>
+            <div class="text-case">
+                <p class="chapter-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+                    when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only fiv Lorem Ipsum has been the industry's standard</p>
+            </div>
+
+<!--            <div class="center" style="float: left; margin-left: 180px;">-->
+<!--                <div class="outer button">-->
+<!--                    <button>Home</button>-->
+<!--                    <span></span>-->
+<!--                    <span></span>-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--            <div class="center">-->
+<!--                <div class="outer button">-->
+<!--                    <button>Sign In</button>-->
+<!--                    <span></span>-->
+<!--                    <span></span>-->
+<!--                </div>-->
+<!--            </div>-->
+
+            <div class="center" style="float: left; margin-left: 180px;">
+                <div class="button"><a class="btn" href="{% url 'home-page' %}">HOME</a></div>
+            </div>
+
+            <div class="center" style="float: right; margin-right: 180px;">
+                <div class="button"><a class="btn" href="{% url 'signin-page' %}">SIGN IN</a></div>
+            </div>
+
         </div>
 
         <div class="enclose"></div>
