--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -147,7 +147,7 @@
                                 <p><a class="imp-link" href="https://www.spe.org/en/">SPE International</a></p>
                                 <p><a class="imp-link" href="https://www.iitism.ac.in/">IIT ISM Official Website</a></p>
                                 <p><a class="imp-link" href="https://parent.iitism.ac.in/index.php/parent_portal/portal0">Parents Portal</a></p>
-                                <p><a class="imp-link" href="https://ir.iitism.ac.in/">International Relations</a></p>
+                                <p><a class="imp-link" href="https://www.fipi.org.in/">FIPI</a></p>
                             </div>
 <!--                            <div class="col-md-6">-->
 <!--                                <p><a href="#">Gallery</p>-->
