--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -76,7 +76,7 @@
     </nav>
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark lower-navbar" style="position: relative; z-index: 1;">
+    <nav class="navbar navbar-expand-lg navbar-dark lower-navbar" style="position: relative; z-index: 1; height: 4em;">
 
         <!-- Collapsible content -->
         <div class="collapse navbar-collapse" id="basicExampleNav">
