minor changes made

--- a/SPE-website/pages/static/pages/landingpage.css
+++ b/SPE-website/pages/static/pages/landingpage.css
@@ -1,7 +1,7 @@
 body {
     height: 98%;
-    background-image: url(/media/dark-bg.jpg);
-     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(/media/dark-bg.jpg);
+    background-image: url(/media/bg-images/premium.jpg);
+    background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), url(/media/bg-images/premium.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -48,7 +48,7 @@ body {
     font-size: 55px;
     letter-spacing: 2px;
     font-weight: 800;
-    margin-bottom: 30px;
+    margin-bottom: 15px;
 }
 
 .chapter-title {
@@ -88,84 +88,9 @@ body {
     color: white;
     font-size: 1.15em;
     font-weight: 750;
-    margin-bottom: 40px;
-    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-top: 10px;
 }
-
-/*
-.center {
-    display: flex;
-    text-align: center;
-}
-
-.outer {
-    position: relative;
-    margin: 0 50px;
-    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
-}
-
-.button {
-    height: 70px;
-    width: 220px;
-    border-radius: 50px;
-}
-
-.outer button, .outer span{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.outer button {
-    background: #848087;
-    color: #f2f2f2;
-    outline: none;
-    border: none;
-    font-size: 20px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    cursor: pointer;
-    z-index: 9;
-}
-
-.button button {
-    height: 60px;
-    width: 210px;
-    border-radius: 50px;
-}
-
-.outer span {
-    height: 100%;
-    width: 100%;
-    background: inherit;
-}
-
-.button span {
-    border-radius: 50px;
-}
-
-.outer:hover span:nth-child(1) {
-    filter: blur(7px);
-}
-
-.outer:hover span:nth-child(2) {
-    filter: blur(14px);
-}
-
-.outer:hover {
-    animation: rotate 1.5s linear infinite;
-}
-
-@keyframes rotate {
-    0% {
-        filter: hue-rotate(0deg);
-    }
-    100% {
-        filter: hue-rotate(360deg);
-    }
-}
-*/
 
 .button {
     position: relative;
