--- a/SPE-website/user/templates/user/signin.html
+++ b/SPE-website/user/templates/user/signin.html
@@ -22,7 +22,7 @@
             <fieldset class="form-group">
 
                 <!-- SPE logo -->
-                <img id='spe-logo' class="mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/e/e1/SPE_Logo_Clear_Bright.png">
+                <img id='spe-logo' class="mx-auto d-block" src="{% static 'pages/landingpage-bg/chapter-logo.png' %}">
                 <!-- SPE logo -->
 
                 <!-- Horizontal Divider -->
