--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#26416c; box-shadow: none !important;">
         <div class="container-fluid">
             <a href="{% url 'home-page' %}" class="navbar-brand">
-                <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png" width="170px" height="80px">
+                <img src="{% static 'pages/landingpage-bg/chapter-inv-logo.png' %}" style="height: 100px; margin: 10px">
             </a>
 
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
@@ -41,22 +41,22 @@
 
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li><a href="{% url 'home-page' %}" class="nav-item nav-link active">Home</a></li>
+                    <li><a href="{% url 'home-page' %}" class="nav-item nav-link active" style="font-size: 27px;">Home</a></li>
                     <li class="dropdown">
-                        <a href="#" class="nav-item nav-link" data-toggle="dropdown">Resources</a>
+                        <a href="#" class="nav-item nav-link" style="font-size: 27px;" data-toggle="dropdown">Resources</a>
                         <div class="dropdown-menu">
                             <a href="{% url 'blog-home' %}" class="dropdown-item">Blogs</a>
                             <a href="{% url 'gazette-page' %}" class="dropdown-item">Gazette</a>
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="nav-item nav-link" data-toggle="dropdown">Events</a>
+                        <a href="#" class="nav-item nav-link" style="font-size: 27px;" data-toggle="dropdown">Events</a>
                         <div class="dropdown-menu">
                             <a href="{% url 'events-home' %}" class="dropdown-item">Upcoming</a>
                             <a href="{% url 'events-past' %}" class="dropdown-item">Past</a>
                         </div>
                     </li>
-                    <li><a href="{% url 'gallery-page' %}" class="nav-item nav-link">Gallery</a></li>
+                    <li><a href="{% url 'gallery-page' %}" style="font-size: 27px;" class="nav-item nav-link">Gallery</a></li>
                     {% if user.is_authenticated %}
                     <li class="dropdown">
                         <a><span class="material-icons" id="AccountCircle" >account_circle</span></a>
@@ -100,12 +100,11 @@
     </nav>
     <!--/.Navbar-->
 
-
-
+<br>
 
     <!-- Messages -->
     {% if messages %} {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}" style="height: 40px; font-size: 20px;">
+    <div class="alert alert-{{ message.tags }} message" style="height: 40px; font-size: 20px;">
         {{ message }}
     </div>
     {% endfor %} {% endif %}
@@ -128,7 +127,7 @@
             <div class="container-fluid">
                 <div class="row" style="overflow: hidden">
                     <div class="col-md-3 footer-about">
-                        <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png" alt="logo-footer">
+                        <img src="{% static 'pages/landingpage-bg/chapter-inv-logo.png' %}" style="height: 250px; margin-left: 60px;" alt="logo-footer">
                     </div>
                     <div class="col-md-4 offset-md-1 footer-contact">
                         <h3>Contact</h3>
