--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -41,22 +41,22 @@
 
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li><a href="{% url 'home-page' %}" class="nav-item nav-link active" style="font-size: 27px;">Home</a></li>
+                    <li><a href="{% url 'home-page' %}" class="nav-item nav-link active" style="font-size: 23px;">Home</a></li>
                     <li class="dropdown">
-                        <a href="#" class="nav-item nav-link" style="font-size: 27px;" data-toggle="dropdown">Resources</a>
+                        <a href="#" class="nav-item nav-link" style="font-size: 23px;" data-toggle="dropdown">Resources</a>
                         <div class="dropdown-menu">
                             <a href="{% url 'blog-home' %}" class="dropdown-item">Blogs</a>
                             <a href="{% url 'gazette-page' %}" class="dropdown-item">Gazette</a>
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="nav-item nav-link" style="font-size: 27px;" data-toggle="dropdown">Events</a>
+                        <a href="#" class="nav-item nav-link" style="font-size: 23px;" data-toggle="dropdown">Events</a>
                         <div class="dropdown-menu">
                             <a href="{% url 'events-home' %}" class="dropdown-item">Upcoming</a>
                             <a href="{% url 'events-past' %}" class="dropdown-item">Past</a>
                         </div>
                     </li>
-                    <li><a href="{% url 'gallery-page' %}" style="font-size: 27px;" class="nav-item nav-link">Gallery</a></li>
+                    <li><a href="{% url 'gallery-page' %}" style="font-size: 23px;" class="nav-item nav-link">Gallery</a></li>
                     {% if user.is_authenticated %}
                     <li class="dropdown">
                         <a><span class="material-icons" id="AccountCircle" >account_circle</span></a>
@@ -67,7 +67,7 @@
                     </li>
                     {% else %}
                     <li>
-                        <a href="{% url 'signin-page' %}" class="nav-item nav-link">Sign In</a>
+                        <a href="{% url 'signin-page' %}" class="nav-item nav-link" style="font-size: 23px;">Sign In</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -104,7 +104,7 @@
 
     <!-- Messages -->
     {% if messages %} {% for message in messages %}
-    <div class="alert alert-{{ message.tags }} message" style="height: 40px; font-size: 20px;">
+    <div class="alert alert-{{ message.tags }} message">
         {{ message }}
     </div>
     {% endfor %} {% endif %}
